# ads

./: README.md
algoritmos/: aula_3
algoritmos/lista2_C/: add_folder.txt
algoritmos/listaC/: CMakeLists.txt  ex1_listaUdemy.c  ex2_listaUdemy.c  ex3_listaUdemy.c  ex4_listaUdemy.c  exrandom.c  fasedavida.c  hexcolor.c  imc.c  password.c  temperature.c  venda_desconto.c
algoritmos/lista_prova/: CMakeLists.txt  cred_bancario.c  imposto_renda.c  notas_escolares.c
web/11_aula/: aspas_simples_duplas.php  conversao_variaveis.php  crase_comandos_OS.php  data_hora.php  funcao_com_erro.php  funcao_mais_usado.php  funcao_menos_usado.php  hello_world.php  int_float_hex.php  sobre_aula.txt  variaveis.php  variaveis2.php  variavel_dinamica.php
web/decima_aula/: exemplo_imc.html  exemplo_login.html  exercicio_salario.html  imc.css  login.css  resume  salario.css
web/nona_aula/: anotacoes  do_while.html  estrutura_dados.html  for.html  for2.html  let_replace.html  num_toFixed_toString.html  trim_upper_lower.html  while.html
web/oitava_aula/: 10_incremento_encadeado.html  11_exemplos_parseint.html  1_if.html  2_switch_case.html  3_switch_true.html  4_switch_string.html  5_incremento.html  6_contagemRegressiva_for.html  7_contagemProgressiva_for.html  8_incremento_exemplo.html  9_incremento_contas.html  exemplos_javascript
web/primeira_aula/: code_primeira_aula.html  primeira_aula
web/quarta_aula/: ex.html  exemplo_caracteresEspeciais.html  exemplo_formulario_2.html  exemplo_formulario_3.html  exemplo_formulario_4.html  exemplo_formulario_5.html  sobre_a_aula
(+52 files in other folders)
