cmake_minimum_required(VERSION 4.0)
project(listaC C)

set(CMAKE_C_STANDARD 11)

add_executable(listaC ex1_listaUdemy.c
        ex2_listaUdemy.c
        ex3_listaUdemy.c
        ex4_listaUdemy.c
        imc.c
        imc.c
        exrandom.c
        hexcolor.c
        password.c
        fasedavida.c
        temperature.c)
